--- a/package.json
+++ b/package.json
@@ -11,26 +11,31 @@
   "author": "",
   "main": "index.js",
   "scripts": {
+    "serve": "node --loader ts-node/esm ./scripts/serve.ts",
     "lint:fix": "eslint '{packages,scripts}/**/*.{js,ts,md}' --fix"
   },
   "bugs": {
     "url": "https://github.com/wonderfulMan/feature/issues"
   },
   "homepage": "https://github.com/wonderfulMan/feature#readme",
-  "dependencies": {
+  "devDependencies": {
     "@changesets/cli": "^2.20.0",
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-angular": "^16.0.0",
+    "@realive/eslint-config-prettier": "^1.1.0",
+    "@realive/eslint-config-ts": "^1.1.0",
+    "@types/jest": "^27.4.0",
+    "@types/koa": "^2.13.4",
     "@types/node": "^17.0.13",
     "eslint": "^8.7.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "koa": "^2.13.4",
+    "koa-proxies": "^0.12.1",
     "lint-staged": "11.2.3",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  },
-  "devDependencies": {
-    "@realive/eslint-config-prettier": "^1.1.0",
-    "@realive/eslint-config-ts": "^1.1.0"
+    "typescript": "^4.5.5"
   }
 }
