--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,25 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "sourceMap": false,
+    "target": "es2017",
+    "module": "esnext",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "moduleResolution": "node",
-    "allowJs": false,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "noImplicitThis": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "removeComments": true,
-    "downlevelIteration": true,
-    "alwaysStrict": false,
-    "lib": ["DOM", "ES2020"],
-    "noImplicitUseStrict": true,
     "strict": true,
+    "strictNullChecks": true,
+    // "noImplicitAny": true,
+    "strictFunctionTypes": true,
+    "declaration": true,
+    "declarationDir": "./types",
+    "resolveJsonModule": true,
+    "rootDir": ".",
+    "baseUrl": ".",
+    "jsx": "preserve",
     "skipLibCheck": true,
-    "target": "ES5"
+    "noUnusedLocals": true,
   },
   "exclude": ["node_modules"],
-  "include": ["packages"]
+  "include": [
+    "packages"
+  ],
 }
