feat: 改造项目为esmodule

--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -4,6 +4,7 @@
   "description": "packaging axios",
   "license": "ISC",
   "author": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest"
