--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "type": "git",
     "url": "git+https://github.com/wonderfulMan/feature.git"
   },
-  "author": "",
+  "author": "https://github.com/wonderfulMan",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "serve": "node --loader ts-node/esm ./scripts/serve.ts",
+    "build": "node --loader ts-node/esm --no-warnings ./scripts/build.ts",
     "lint:fix": "eslint '{packages,scripts}/**/*.{js,ts,md}' --fix"
   },
   "bugs": {
@@ -34,6 +36,7 @@
     "koa-proxies": "^0.12.1",
     "lint-staged": "11.2.3",
     "prettier": "^2.5.1",
+    "rollup": "^2.68.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
