--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
-    // "noImplicitAny": true,
     "strictFunctionTypes": true,
     "declaration": true,
     "declarationDir": "./types",
@@ -20,6 +19,7 @@
   },
   "exclude": ["node_modules"],
   "include": [
-    "packages"
+    "packages",
+    "scripts"
   ],
 }
