--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "feature",
   "version": "1.0.0",
   "description": "realive/feature",
-  "keywords": [],
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wonderfulMan/feature.git"
   },
-  "author": "https://github.com/wonderfulMan",
+  "author": "wonderfulMan <https://github.com/wonderfulMan>",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "serve": "node --loader ts-node/esm ./scripts/serve.ts",
-    "build": "node --loader ts-node/esm --no-warnings ./scripts/build.ts",
+    "ts:esm": "node --loader ts-node/esm --no-warnings --experimental-specifier-resolution=node",
+    "serve": "pnpm ts:esm ./scripts/serve.ts",
+    "build": "node --experimental-specifier-resolution=node --experimental-modules --loader ts-node/esm ./scripts/build/index.ts",
     "lint:fix": "eslint '{packages,scripts}/**/*.{js,ts,md}' --fix"
   },
   "bugs": {
@@ -26,10 +25,16 @@
     "@commitlint/config-angular": "^16.0.0",
     "@realive/eslint-config-prettier": "^1.1.0",
     "@realive/eslint-config-ts": "^1.1.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@types/koa": "^2.13.4",
     "@types/node": "^17.0.13",
+    "@types/validate-npm-package-name": "^3.0.3",
+    "chalk": "^5.0.0",
+    "esbuild": "^0.14.23",
     "eslint": "^8.7.0",
+    "fs-extra": "^10.0.0",
+    "globby": "^13.1.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "koa": "^2.13.4",
@@ -37,8 +42,11 @@
     "lint-staged": "11.2.3",
     "prettier": "^2.5.1",
     "rollup": "^2.68.0",
+    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-esbuild": "^4.8.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "validate-npm-package-name": "^3.0.0"
   }
 }
