--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -2,10 +2,35 @@
   "name": "@realive/http",
   "version": "1.0.0",
   "description": "packaging axios",
-  "license": "ISC",
-  "author": "",
-  "type": "module",
-  "main": "index.js",
+  "keywords": [
+    "axios",
+    "packaging axios",
+    "utils"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wonderfulMan/feature.git",
+    "directory": "packages/http"
+  },
+  "author": "wonderfulMan <https://github.com/wonderfulMan>",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./*"
+  },
+  "bugs": {
+    "url": "https://github.com/wonderfulMan/feature/issues"
+  },
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "unpkg": "./dist/index.umd.js",
+  "jsdelivr": "./dist/index.umd.js",
+  "sideEffects": false,
   "scripts": {
     "test": "jest"
   },
