--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@realive/http",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "packaging axios",
   "keywords": [
     "axios",
@@ -14,6 +14,13 @@
     "directory": "packages/http"
   },
   "author": "wonderfulMan <https://github.com/wonderfulMan>",
+  "files": [
+    "./dist"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.yarnpkg.com"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
