fix(@realive/http): handleDataError内部类型错误，优化switch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strictFunctionTypes": true,
     "declaration": true,
     "declarationDir": "./types",
+    "allowSyntheticDefaultImports":true,
     "resolveJsonModule": true,
     "rootDir": ".",
     "baseUrl": ".",
